# FinancePlatform

./: sfdx-project.json
finance-platform/: .env.example  Dockerfile  README.md  docker-compose.yml  finance.db  pyproject.toml
finance-platform/app/: main.py
finance-platform/app/api/: deps.py
finance-platform/app/api/v1/: auth.py  expenses.py  router.py
finance-platform/app/core/: config.py  security.py
finance-platform/app/db/: session.py
finance-platform/app/models/: audit_log.py  expense.py  user.py
finance-platform/app/schemas/: auth.py  expense.py  user.py
finance-platform/app/services/: kafka_producer.py
finance-platform/docs/: Finance-Platform-Documentation.md
finance-platform/finance_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
finance-platform/frontend/: Dockerfile  index.html  package-lock.json  package.json
finance-platform/frontend/src/: App.jsx  api.js  styles.css
finance-platform/tests/: test_health.py
force-app/main/default/classes/: PositionController.cls  PositionControllerTest.cls  Vinay.cls  VinayBatch.cls
